# lilvault

./: .gitignore  CLAUDE.md  Cargo.toml  NIX_USAGE.md  README.md  TEST_IMPLEMENTATION_PROMPT.md  TODO.md  devenv.nix  devenv.yaml  flake.nix  vault.db
.claude/: cargo-check-hook.sh  cargo-clippy-hook.sh  cargo-test-hook.sh  notification-hook.sh  settings.json  settings.local.json  treefmt-hook.sh
.claude/hooks/: cargo-doc.sh  cargo-tree.sh  format.sh  rust-check.sh  rust-clippy.sh  rust-test.sh
docs/: NIX_USAGE.md
migrations/: 001_initial_schema.sql  002_add_updated_at_columns.sql  002_combine_keys_tables.sql  003_add_secret_host_access.sql  004_add_secret_recipients.sql
src/: error.rs  lib.rs  main.rs  test_file.rs  utils.rs  validation.rs
src/audit/: mod.rs
src/cli/: mod.rs
src/commands/: audit.rs  export.rs  init.rs  keys.rs  mod.rs  secrets.rs
src/crypto/: mod.rs
src/db/: audit_log.rs  keys.rs  mod.rs  models.rs  secret_host_access.rs  secret_storage.rs  secrets.rs  secrets_keys.rs
tests/: cli_tests.rs  reencryption_tests.rs
